src/livecodes/styles/app.scss
/* ... */
#editor-container {
  display: flex;
  flex-direction: row;
  height: calc(100% - var(--toolbar-height));
}

.layout-vertical {
  #editor-container {
    flex-direction: column;

    .gutter #size-label {
      left: 5px !important;
      top: 15px !important;
    }
  }

  .gutter.gutter-vertical {
    height: 4px;

    #handle {
      transform: rotate(90deg);
    }
  }
}

@media only screen and (max-width: 480px) {
  #toolbar {
    align-items: flex-start;
    display: flex;
    height: calc(var(--toolbar-height) * 2 - var(--s4));

    .toolbar-render {
      justify-content: space-between;
      place-items: center;
    }

    #select-editor {
      inset-inline-start: 0; /* left */
      max-width: unset;
      position: absolute;
      top: var(--toolbar-height);

      .editor-title > span {
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
    }

    #light-theme-button,
    #dark-theme-button {
      display: none;
    }

    #login-link,
    #logout-link {
      height: 100%;
    }
  }

  #editor-container {
    height: calc(100% - (var(--toolbar-height) * 2) + var(--s4));
  }

  #modal {
    .modal-search {
      i.icon-calendar-sort,
      i.icon-arrow-text-sort {
        display: inline-block !important;
      }
    }
  }

  .layout-vertical {
    .tool-buttons#editor-tools {
      display: none;
    }
  }
}

#editors {
  background: var(--gutter-split-bg-color);
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: flex-end;
  overflow: hidden;
  position: relative;
  top: 0;

  > .editor {
    font-variant-ligatures: discretionary-ligatures;
    visibility: hidden;
  }

  > div {
    flex-grow: 1;
    min-height: var(--s32);
    position: relative;
    width: 100%;
  }

  .custom-editor {
    background-color: var(--custom-editor-background-color);
    display: none;
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 10;

    > iframe {
      border: 0;
      height: 100%;
      left: 0;
      margin: 0;
      padding: 0;
      position: absolute;
      top: 0;
      width: 100%;
    }

    .loading-custom-editor {
      color: var(--custom-editor-loading-color);
      margin: 1em;
    }
  }
}

.tool-buttons {
  background: var(--toolbar-bg-color);
  height: var(--toolspane-bar-height);

  &.hidden {
    display: none;
  }

  > button,
  > span {
    align-items: center;
    background: var(--btn-bg-color);
    border: var(--btn-border);
    border-radius: var(--btn-border-radius);
    color: var(--btn-color);
    cursor: pointer;
    display: inline-flex;
    font-size: var(--font-size); // todo text vs icon size ??
    height: var(--btn-height, 26px);
    justify-content: center;
    margin: 3px;
    min-width: 32px;
    position: relative;

    &.text {
      align-items: center;
      display: flex;
      font-size: var(--s12);
      height: var(--btn-height, 26px);
      justify-content: center;
    }

    svg {
      margin: 4px auto;
    }

    &:hover,
    &:active,
    &.active {
      background: var(--btn-bg-active);
      color: var(--btn-active);
    }

    &.disabled {
      opacity: var(--disabled);
    }
  }

  &#editor-tools {
    align-items: center;
    display: flex;
    flex-grow: 0;

    #editor-status {
      background-color: transparent;
      display: flex;
      flex-grow: 1;
      font-size: var(--s12);
      justify-content: flex-start;
      white-space: nowrap;

      > span {
        margin: auto 4px;
      }
    }
  }
}

.tool-buttons .active .mark,
.tools-pane-title.has-mark .mark {
  border: 4px solid var(--editor-tools-mark-color);
  border-radius: 4px;
  bottom: 3px;
  display: inline-block;
  position: absolute;
  right: 3px;
}

@media only screen and (max-width: 768px) {
  #copy-as-url-btn,
  #editor-status {
    display: none;
  }
}

.copy-button {
  background-color: var(--btn-bg-color);
  border-radius: var(--btn-border-radius);
  cursor: pointer;
  display: none;
  padding: 1px;
  position: absolute;
  right: 20px;
  top: 5px;

  &.visible {
    display: unset;
  }
}

#editors > div:hover .copy-button {
  display: unset;
}

#output {
  background-color: var(--toolbar-bg-color);
  height: 100%;
  overflow: hidden;
}

#result {
  background-color: #fff;
  resize: both;

  &.full {
    height: 100%;
    max-height: 100%;
  }

  iframe {
    border: 0;
    height: 100%;
    transform-origin: top left;
    width: 100%;
    z-index: 1;

    &.zoom50 {
      height: 200%;
      min-width: 200%;
      transform: scale(0.5);
      width: 200%;
    }

    &.zoom25 {
      height: 400%;
      min-width: 400%;
      transform: scale(0.25);
      width: 400%;
    }
  }
}

#tools-pane-bar {
  font-size: var(--s12);
  height: var(--toolspane-bar-height);
  justify-content: space-between;
  padding: 1px 0; // fix bottom space
}

#tools-pane-titles {
  display: flex;
  height: var(--toolspane-bar-height);
  justify-content: flex-start;
}

a.tools-pane-title {
  align-items: center;
  background-color: var(--toolspane-bg-color);
  border-bottom: var(--toolspane-border);
  color: var(--toolspane-color);
  cursor: pointer;
  display: flex;
  justify-content: center;
  padding: 0 var(--s8);
  position: relative;

  &:hover,
  &.active {
    background-color: var(--toolspane-bg-active);
    border-bottom: var(--toolspane-border-active);
    color: var(--toolspane-active);
  }
}

#tools-pane-buttons {
  align-items: center;
  display: inherit;
  text-align: right;
  white-space: nowrap;

  > div {
    white-space: nowrap;
  }
}

#tools-pane > div {
  display: flex;
  flex-direction: column;
  height: 0;
  visibility: hidden;

  /* (display: none) disables console logs when inactive */
  &.active {
    height: 100%;
    visibility: visible;
  }
}
/* ... */

